# cmake-gtest-template

./: CMakeLists.txt  README.md
tst/: CMakeLists.txt
tst/test1/: CMakeLists.txt  test1-main.cpp
